--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -33,7 +33,7 @@ basket.info.amount.name=Quantity
 basket.info.amount=Amount of designs you wish to buy. If you buy 4 or more, you will get 25% off the full price.
 basket.info.design.size.name=Product size
 basket.info.design.size=Select the size you want your design to be.\
-  If you wish to have another size, feel free to send us an email at info@treecreate.dk and tell us what you would like. 
+  If you wish to have another size, feel free to send us an e-mail at info@treecreate.dk and tell us what you would like. 
 basket.add.to.basket=Add to basket
 basket.accept.and.pay=Accept & pay
 basket.price=Price
@@ -55,19 +55,19 @@ basket.phone.number=Phone nr
 basket.street.address=Address 
 basket.street.address2=Address 2
 basket.names=Name
-basket.email=Email
+basket.email=E-mail
 basket.delivery.info=Delivery Info
 basket.back=Back
 basket.update.info=Update Info
 basket.issue.text=If you have any questions or issues with an order, you can contact us at info@treecreate.dk. 
 basket.procent.off=Add four or more trees to your basket and get 25% off your entire transaction.
-basket.note.one=Note: You can only purchase this tree when you have logged in and verified your email.
+basket.note.one=Note: You can only purchase this tree when you have logged in and verified your e-mail.
 basket.note.two=Note: Packaging is made of recycled materials that are eco friendly and the paper is FSC certified.
 basket.order.product =Family Tree -
 basket.popup.validate =There are no orders to purchase
 basket.popup.validate.name=The name is required
 basket.popup.validate.phone.number=The phone number is required
-basket.popup.validate.email=The email is required
+basket.popup.validate.email=The e-mail is required
 basket.popup.validate.street.address=The street address is required
 basket.popup.validate.city=The city is required
 basket.popup.validate.postcode=The postcode is required
@@ -77,6 +77,7 @@ basket.popup.discount.not.valid=The provided discount code is not valid
 basket.popup.discount.not.active=The provided discount code is no longer active
 basket.popup.discount.accepted=Code accepted, applying the discount
 addToBasket.checkLogin=You need to login before you can add a design to your basket
+basket.expected.delivery=Expected delivery : 1-2 weeks
 
 
 
@@ -112,7 +113,7 @@ mobile.text=Treecreate does not support modifying or creating a tree on mobile d
 mobile.text.two=We hope you can return to 
 mobile.text.treecreate=Treecreate.dk
 mobile.text.three= on a laptop or computer to create your tree design.
-mobile.text.four=You can submit you email here for special offers: 
+mobile.text.four=You can submit you e-mail here for special offers: 
 
 
 
@@ -138,7 +139,7 @@ login.confirm.password=Confirm password
 login.forgot.password=Forgot password?
 login.sign.up=SIGN UP
 login.create=Create Account
-login.popup.submit.email=Email is required to login
+login.popup.submit.email=E-mail is required to login
 login.popup.submit.password=Password is required to login
 login.popup.valid=Welcome Back!
 login.popup.invalid=The credentials are invalid. Try again
@@ -149,12 +150,12 @@ SIGNUP=SIGNUP
 
 signup.terms.and.conditions.text=By clicking Create Account you state that you have read and agreed to our 
 signup.terms.and.conditions.link=terms and conditions
-signup.popup.email=Email is required to register a new account
+signup.popup.email=E-mail is required to register a new account
 signup.popup.password=Password is required to register a new account
 signup.popup.password.mismatch=The passwords don't match
-signup.popup.email.invalid=Provided email does not seem to be a valid email
+signup.popup.email.invalid=Provided e-mail does not seem to be a valid e-mail
 signup.popup.success=Thanks for joining Treecreate!
-signup.popup.already.exists=An account with this email already exists. Try again
+signup.popup.already.exists=An account with this e-mail already exists. Try again
 
 
 
@@ -166,7 +167,7 @@ home.intro.text=Unique wood design with several styling options which make every
 home.size.title=Sizes
 home.size.text=After creating the design for your family tree, you are able to select the size you wish to purchase the tree in. \
   We have a selection of sizes that include:
-home.size.text.two=If you wish to purchase another size, you can always request it by sending us an email at info@treecreate.dk. We will respond \
+home.size.text.two=If you wish to purchase another size, you can always request it by sending us an e-mail at info@treecreate.dk. We will respond \
   as quickly as possible and give you the best price we can offer depending on your request. NOTE that the bark might be on the top of your design \
   and not on the sides.
 home.package.title=In the package
@@ -187,30 +188,30 @@ home.team.text.two=\nOur goal is to create a sustainable company, that produces 
   each purchase to plant a tree. That way we make the world a better and greener place - one tree at the time.
 
 home.create.now=Design Your Tree
-home.subscribe.title=You can also submit your email to receive special offers here: 
-home.subscribe.input=Your email...
+home.subscribe.title=You can also submit your e-mail to receive special offers here: 
+home.subscribe.input=Your e-mail...
 home.subscribe.button=Submit
 home.invalid.source=ERROR 404, there seems to be no matching page.
 home.forgot.password.title=Reset password
 home.verification.failed=Verification has failed - perhaps you have already verified? You are also welcome to contact support via info@treecreate.dk. 
-home.how.to.verify.email.title=How to verify your email
-home.how.to.verify.email.text1=When creating a new account, a verification email has been sent to your inbox
-home.how.to.verify.email.text2=Click the link in the email to verify your account
-home.how.to.verify.email.text3=You can resend the verification email if you have not received the message:
+home.how.to.verify.email.title=How to verify your e-mail
+home.how.to.verify.email.text1=When creating a new account, a verification e-mail has been sent to your inbox
+home.how.to.verify.email.text2=Click the link in the e-mail to verify your account
+home.how.to.verify.email.text3=You can resend the verification e-mail if you have not received the message:
 home.resend.email=Resend email
 home.thanks.for.verifying=Thank you for verifying
 home.type.email=Type your email . . .
 home.type.password=Type your password . . . 
 home.verify.email.text1=Please
 home.verify.email.text2=Verify
-home.verify.email.text3=your email to continue using our website
+home.verify.email.text3=your e-mail to continue using our website
 
 
 
 FOOTER=FOOTER
 
 footer.contact.title=Contact
-footer.contact.text=Treecreate CVR nr. 38 45 31 14\nEmail: info@treecreate.dk\nPhone nr. +45 26 19 23 27
+footer.contact.text=Treecreate CVR nr. 38 45 31 14\nE-mail: info@treecreate.dk\nPhone nr. +45 26 19 23 27
 footer.product.title=Product
 footer.product.text=Every purchase plants a tree Eco-Friendly packaging Produced in Denmark
 footer.address.title=Address
@@ -247,9 +248,9 @@ orders.view=View
 PRODUCT.TEMPLATE=PRODUCT TEMPLATE
 
 productTemplate.navigationContainer = Please login before adding items to the basket
-productTemplate.verification.email.success=The verification email has been sent
-productTemplate.verification.email.failure=Something went wrong while sending the email. Try again later or contact support at info@treecreate.dk
-productTemplate.newsletter.email=Provided email does not seem to be a valid email
+productTemplate.verification.email.success=The verification e-mail has been sent
+productTemplate.verification.email.failure=Something went wrong while sending the e-mail. Try again later or contact support at info@treecreate.dk
+productTemplate.newsletter.email=Provided e-mail does not seem to be a valid e-mail
 productTemplate.newsletter.success= has been added to the newsletter list
 productTemplate.newsletter.failure=An issue occurred when trying to join the newsletter
 
@@ -259,11 +260,11 @@ LANDINGPAGE=LANDINGPAGE
 
 loremIpsum=Watashi Latin
 landing.popup.valid=Thank you for subscribing!
-landing.popup.invalid=Invalid email...
+landing.popup.invalid=Invalid e-mail...
 landing.changeLanguage=Dansk
 landing.comingSoon=Coming Soon
 landing.comingSoon.subscribe=Subscribe for starting offers
-landing.comingSoon.subscribe.input=Your email...
+landing.comingSoon.subscribe.input=Your e-mail...
 landing.submit=Submit
 landing.generalInfo.christmas.title=Are you looking for the perfect Christmas present that is both unique and personal for the whole family?
 landing.generalInfo.christmas.text=Get a personal design with your family tree and have it laser cut into a beautiful piece of oak wood. \
@@ -293,7 +294,7 @@ landing.review.anna.text="It's SO pretty. I love the family tree and how it ende
 landing.review.laura.title=Laura
 landing.review.laura.text="I bought one for my grandparent wedding and they loved it! It's so pretty."
 landing.footer.contact.title=Contact
-landing.footer.contact.text=Email: info@treecreate.dk
+landing.footer.contact.text=E-mail: info@treecreate.dk
 landing.footer.product.title=Product
 landing.footer.product.text=Every purchase plants a tree\nEco-Friendly packaging\nProduced in Denmark
 landing.footer.address.title=Address
