--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -77,7 +77,7 @@ basket.popup.discount.not.valid=The provided discount code is not valid
 basket.popup.discount.not.active=The provided discount code is no longer active
 basket.popup.discount.accepted=Code accepted, applying the discount
 addToBasket.checkLogin=You need to login before you can add a design to your basket
-basket.expected.delivery=Expected delivery : 1-2 weeks
+basket.expected.delivery=Free shipping : 1-2 weeks ( expected: 
 
 
 
