--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -76,7 +76,7 @@ basket.popup.discount.not.valid=Denne kode findes ikke
 basket.popup.discount.not.active=Denne kode er ikke activ
 basket.popup.discount.accepted=Kode accepteret, rabatten er givet
 addToBasket.checkLogin=Du skal være logget ind, for at kunne ligge noget i din kurv
-basket.expected.delivery=Forventede leveringstid 1-2 uger
+basket.expected.delivery=Gratis forsendelse : 1-2 uger ( forventet:
 
 
 
