v.1.0.9 Fix User Verification Popup not being Localized

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -143,6 +143,7 @@ login.popup.submit.email=E-mail is required to login
 login.popup.submit.password=Password is required to login
 login.popup.valid=Welcome Back!
 login.popup.invalid=The credentials are invalid. Try again
+login.user.not.verified=You need to verify your e-mail
 
 
 
