--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -142,6 +142,7 @@ login.popup.submit.email=Du mangler at skrive din e-mail
 login.popup.submit.password=Du mangler at skrive din kode
 login.popup.valid=Velkommen tilbage!
 login.popup.invalid=Din e-mail eller kode er desværre forkert. Prøv venligst igen, tak
+login.user.not.verified=Du mangler at godkende din e-mail
 
 
 
