--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,7 +8,7 @@ navbar.profile=Profile
 
 FAMILYTREE=FAMILYTREE
 
-familyTree.info.how.to.title=How does it work?
+familyTree.info.how.to.title=How does it work? It doesn't
 familyTree.info.how.to=Click anywhere on the tree to create a new box. You can save your tree by adding it to basket (it can still be edited later).
 
 familyTree.info.banner.text.name=Banner text
