--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -263,7 +263,7 @@ loremIpsum=Watashi Latin
 landing.popup.valid=Thank you for subscribing!
 landing.popup.invalid=Invalid e-mail...
 landing.changeLanguage=Dansk
-landing.comingSoon=Coming Soon
+landing.comingSoon=Under Construction
 landing.comingSoon.subscribe=Subscribe for starting offers
 landing.comingSoon.subscribe.input=Your e-mail...
 landing.submit=Submit
