--- a/src/main/resources/messages_dk.properties
+++ b/src/main/resources/messages_dk.properties
@@ -262,7 +262,7 @@ loremIpsum=Watashi Latin
 landing.popup.valid=Tak for at abonnerer!
 landing.popup.invalid=Ugyldig e-mail...
 landing.changeLanguage=English
-landing.comingSoon=Kommer snart
+landing.comingSoon=Under Konstruktion
 landing.comingSoon.subscribe=Abonner for at få åbningstilbud!
 landing.comingSoon.subscribe.input= Din e-mail...
 landing.submit=Abonner
